--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -2,6 +2,7 @@
   "name" : "TenhoAcesso",
   "version" : "0.0.1",
   "dependencies" : {
-    "mongodb" : "1.3.*"
+    "mongodb" : "1.3.*",
+    "wl": "https://www.ibm.com/developerworks/community/blogs/worklight/resource/wl-0.0.1a.tgz"
   }
 }
